implemented new design system

--- a/1.instructions.md
+++ b/1.instructions.md
@@ -5,6 +5,7 @@ Before doing anything:
 1. Read and fully understand:
    - `/context/frontend.yaml`
    - `/context/decisions.yaml`
+   - `/context/design.yaml`
 
 These files are the **single source of truth**.
 Do NOT invent features.
